Объединил скрипты в один файл

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="wrapper">
-        <header class="header" id="stickyHeader">
+        <header class="header header--404" id="stickyHeader">
             <div class="header__top">
                 <div class="container">
                     <nav class="header__top-nav">
@@ -602,9 +602,9 @@
 
                     </div>
                 </div>
-                <div class="catalog-popup" id="catalogPopup">
+                <div class="catalog-popup" id="catalogPopup" data-modal>
                     <div class="container">
-                        <div class="catalog-popup__wrapper">
+                        <div class="catalog-popup__wrapper" data-modal-container>
                             <nav class="catalog-popup__menu">
                                 <ul class="catalog-popup__menu-list">
                                     <li class="catalog-popup__menu-item">
@@ -633,7 +633,8 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и сушильные
+                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и
+                                            сушильные
                                             машины</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
@@ -693,7 +694,8 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для уборки</a>
+                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для
+                                            уборки</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
@@ -1533,7 +1535,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                
+
                                 <div class="promo-banner" style="background-image: url('./img/catalog-banner.png');">
                                     <p class="catalog-popup__categories-text">
                                         Не можете выбрать?
@@ -2213,9 +2215,9 @@
         </footer>
     </div>
 
-    <div id="questionForm" class="modal">
-        <div class="container">
-            <form class="question-form" action="#">
+    <div id="questionForm" class="modal" data-modal>
+        <div class="container modal-container" >
+            <form class="question-form" action="#" data-modal-container>
                 <button class="close-btn close-btn--question" type="button">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -2235,12 +2237,14 @@
                         <input id="questionPhoneInput" type="tel" placeholder="+7 (9xx) xxx-xx-xx" required>
                         <input id="questionMailInput" type="email" placeholder="xxxxxx@xx.xx" required>
                         <div class="question-form__checkbox">
-                            <input id="questionCheckbox" type="checkbox" required name="question-checkbox">
-                            <label for="questionCheckbox"></label>
-                            <p>
-                                Отправляя форму Вы соглашаетесь с
-                                <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
-                            </p>
+                            <label>
+                                <input type="checkbox" required name="question-checkbox">
+                                <p>
+                                    Отправляя форму Вы соглашаетесь с
+                                    <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                </p>
+                            </label>
+
                         </div>
 
                         <button id="questionSubmit" class="rect-btn rect-btn--question" type="submit">
@@ -2276,8 +2280,8 @@
         </div>
     </div>
 
-    <div id="citySelect" class="modal">
-        <div class="city-select">
+    <div id="citySelect" class="modal" data-modal>
+        <div class="city-select modal-container" data-modal-container>
             <h4 class="city-select__title">
                 Выберите город доставки
             </h4>
@@ -2329,8 +2333,8 @@
         </div>
     </div>
 
-    <div id="authRegister" class="modal">
-        <div class="auth__inner">
+    <div id="authRegister" class="modal" data-modal>
+        <div class="auth__inner modal-container" data-modal-container>
             <div class="auth__box auth__box--register">
                 <h4 class="auth__title">
                     Регистрация
@@ -2386,7 +2390,7 @@
                 </form>
                 <div class="auth__footer">
                     <span>Уже есть аккаунт?</span>
-                    <a href="./personal.html">Войти</a>
+                    <a href="#">Войти</a>
                 </div>
             </div>
             <div class="auth__box auth__box--verify">
@@ -2417,15 +2421,15 @@
                 </form>
                 <div class="auth__footer">
                     <span>Уже есть аккаунт?</span>
-                    <a href="./personal.html">Войти</a>
+                    <a href="#">Войти</a>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <div id="authLogin" class="modal">
-        <div class="auth__inner">
+    <div id="authLogin" class="modal" data-modal>
+        <div class="auth__inner" data-modal-container>
             <div class="auth__box auth__box--login">
                 <h4 class="auth__title auth__title--login">
                     Вход
@@ -2563,6 +2567,7 @@
             </li>
         </ul>
     </div>
+
     <div class="mobile-overlay">
     </div>
 
@@ -2574,7 +2579,7 @@
             });
         });
     </script>
-    <script src="./js/catalog.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
     <script src="./js/mobile.js" type="module"></script>
 </body>
 
