--- a/personal.html
+++ b/personal.html
@@ -2468,7 +2468,7 @@
         });
     </script>
 
-    <script src="./js/personal.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
 </body>
 
 </html>
