--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="wrapper">
-        <header class="header header--404" id="stickyHeader">
+        <header class="header" id="stickyHeader">
             <div class="header__top">
                 <div class="container">
                     <nav class="header__top-nav">
@@ -1658,8 +1658,8 @@
 
                 </div>
             </div>
-            <div class="header-menu">
-                <div class="header-menu__inner">
+            <div class="header-menu" data-modal>
+                <div class="header-menu__inner" data-modal-container>
                     <button class="header-menu__close close-btn close-btn--header-menu">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -2580,7 +2580,6 @@
         });
     </script>
     <script src="./js/script.js" type="module"></script>
-    <script src="./js/mobile.js" type="module"></script>
 </body>
 
 </html>
