--- a/cart.html
+++ b/cart.html
@@ -1693,7 +1693,7 @@
                     <div class="cart__inner">
                         
                         <div class="cart-list">
-                            <div class="cart-list__header">
+                            <div class="cart-list__header skeleton">
                                 <p class="cart-list__header-item">
                                     Товары в корзине
                                 </p>
