Сверстал страницу избранного

--- a/sitemap.html
+++ b/sitemap.html
@@ -39,6 +39,9 @@
         <li>
             <a href="./product.html">Страница товара</a>
         </li>
+        <li>
+            <a href="./favorites.html">Страница избранного</a>
+        </li>
     </ul>
 </body>
 </html>
