--- a/personal.html
+++ b/personal.html
@@ -2392,7 +2392,7 @@
 
     <div id="mobile-bottom-menu">
         <ul class="mobile-bottom-menu__inner">
-            <li class="mobile-bottom-menu__item active">
+            <li class="mobile-bottom-menu__item">
                 <a href="./index.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -2401,7 +2401,7 @@
                     </svg>
                 </a>
             </li>
-            <li class="mobile-bottom-menu__item">
+            <li class="mobile-bottom-menu__item active">
                 <a href="./auth.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -2432,7 +2432,7 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="#">
+                <a href="./favorites.html">
                     <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9.465 14.6077C9.21 14.6977 8.79 14.6977 8.535 14.6077C6.36 13.8652 1.5 10.7677 1.5 5.5177C1.5 3.2002 3.3675 1.3252 5.67 1.3252C7.035 1.3252 8.2425 1.9852 9 3.0052C9.7575 1.9852 10.9725 1.3252 12.33 1.3252C14.6325 1.3252 16.5 3.2002 16.5 5.5177C16.5 10.7677 11.64 13.8652 9.465 14.6077Z"
@@ -2441,7 +2441,7 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="#">
+                <a href="./compare.html">
                     <svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.68457 3.87012H11.0646C12.3096 3.87012 13.3146 4.87512 13.3146 6.12012V8.61012"
                             stroke="white" stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
