--- a/product.html
+++ b/product.html
@@ -2049,6 +2049,24 @@
                         </div>
                         <div class="product-box__inner">
                             <div class="product-box__gallery skeleton">
+                                <div class="label-container">
+                                    <div class="label" style="background-color: #FF8023;">
+                                        Новинка
+                                    </div>
+                                    <div class="label" style="background-color: #D44F68;">
+                                        Комплектом дешевле
+                                        <div class="label-hint">
+                                            <div class="label-hint-content">
+                                                Товар участвует в акции "Комплектом дешевле" <br>
+                                                <a href="#">Подробности</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <a class="label special" href="#" style="background-color: #D44F68;">
+                                        <img src="./img/icons/gift.svg" alt="">
+                                        <p>Получить в подарок</p>
+                                    </a>
+                                </div>
                                 <div class="zoom-box">
                                     <div class="zoom-img">
                                         <div class="zoom-cursor"></div>
@@ -2057,15 +2075,6 @@
                                 </div>
 
                                 <div class="swiper slider-product">
-                                    <div class="label-container">
-                                        <div class="label" style="background-color: #FF8023;">
-                                            Новинка
-                                        </div>
-                                        <div class="label" style="background-color: #D44F68;">
-                                            Комплектом дешевле
-                                        </div>
-                                    </div>
-
                                     <img class="country lazyload" src="./img/icons/countries/italy.svg" alt="">
                                     <div class="swiper-wrapper slider-product-wrapper">
                                         <div class="swiper-slide slider-product-slide">
@@ -5815,7 +5824,7 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="#">
+                <a href="./favorites.html">
                     <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9.465 14.6077C9.21 14.6977 8.79 14.6977 8.535 14.6077C6.36 13.8652 1.5 10.7677 1.5 5.5177C1.5 3.2002 3.3675 1.3252 5.67 1.3252C7.035 1.3252 8.2425 1.9852 9 3.0052C9.7575 1.9852 10.9725 1.3252 12.33 1.3252C14.6325 1.3252 16.5 3.2002 16.5 5.5177C16.5 10.7677 11.64 13.8652 9.465 14.6077Z"
@@ -5824,7 +5833,7 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="#">
+                <a href="./compare.html">
                     <svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.68457 3.87012H11.0646C12.3096 3.87012 13.3146 4.87512 13.3146 6.12012V8.61012"
                             stroke="white" stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
