--- a/sitemap.html
+++ b/sitemap.html
@@ -42,6 +42,9 @@
         <li>
             <a href="./favorites.html">Страница избранного</a>
         </li>
+        <li>
+            <a href="./search.html">Страница поиска</a>
+        </li>
     </ul>
 </body>
 </html>
