--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                             <li class="header__top-item">
                                 <a class="header__top-link" href="./contacts.html">Контакты</a>
                             </li>
+                            <li class="header__top-item">
+                                <a class="header__top-link" href="./brands.html">Бренды</a>
+                            </li>
+                            <li class="header__top-item">
+                                <a class="header__top-link" href="./videos.html">Видеообзоры</a>
+                            </li>
+                            <li class="header__top-item">
+                                <a class="header__top-link" href="./news.html">Полезные статьи</a>
+                            </li>
                         </ul>
                         <div class="header__top-info">
                             <a class="header__top-link header__top-link--info">
@@ -5445,7 +5454,7 @@
                         </div>
                     </div>
 
-                    <a class="brands__link skeleton" href="#">
+                    <a class="brands__link skeleton" href="./brands.html">
                         Смотреть все бренды
                         <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
