--- a/search.html
+++ b/search.html
@@ -40,6 +40,15 @@
                             <li class="header__top-item">
                                 <a class="header__top-link" href="./contacts.html">Контакты</a>
                             </li>
+                            <li class="header__top-item">
+                                <a class="header__top-link" href="./brands.html">Бренды</a>
+                            </li>
+                            <li class="header__top-item">
+                                <a class="header__top-link" href="./videos.html">Видеообзоры</a>
+                            </li>
+                            <li class="header__top-item">
+                                <a class="header__top-link" href="./news.html">Полезные статьи</a>
+                            </li>
                         </ul>
                         <div class="header__top-info">
                             <a class="header__top-link header__top-link--info">
