Сверстал страницу бренда

--- a/brands.html
+++ b/brands.html
@@ -1957,16 +1957,16 @@
                     </div>
                     <div class="tags">
                         <div class="tags__item skeleton blue current">
-                            <a href="./category.html">Все</a>
+                            <a href="./brands.html">Все</a>
                         </div>
                         <div class="tags__item skeleton blue">
-                            <a href="./category.html">Техника</a>
+                            <a href="./brands.html">Техника</a>
                         </div>
                         <div class="tags__item skeleton blue">
-                            <a href="./category.html">Кухонная сантехника</a>
+                            <a href="./brands.html">Кухонная сантехника</a>
                         </div>
                         <div class="tags__item skeleton blue">
-                            <a href="./category.html">Сантехника для ванной</a>
+                            <a href="./brands.html">Сантехника для ванной</a>
                         </div>
                     </div>
                 </div>
