--- a/sitemap.html
+++ b/sitemap.html
@@ -45,6 +45,9 @@
         <li>
             <a href="./search.html">Страница поиска</a>
         </li>
+        <li>
+            <a href="./brands.html">Страница поиска</a>
+        </li>
     </ul>
 </body>
 </html>
